<resources>
    <string name="app_name">Text Editor</string>
    <string name="text_editor_name">Nama Text Editor</string>
    <string name="detail">Detail</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="with_cardview">with CardView</string>
    <string name="share">Share</string>
    <string name="username">Nanda Arya Putra</string>
    <string name="email">akunpribadi413@gmail.com</string>
    <string name="about">About</string>
    <string name="text_editor_image">Text Editor Image</string>
    <string name="theme_switch_button">Theme Switch Button</string>
    <string name="floating_action_button">Submit</string>
</resources>