<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_list"
        android:title="@string/list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_grid"
        android:title="@string/grid"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cardview"
        android:title="@string/with_cardview"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about_page"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item android:id="@+id/switch_action_theme"
        android:title="@string/theme_switch_button"
        app:actionLayout="@layout/use_switch"
        app:showAsAction="ifRoom"/>
</menu>